--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   # svg图片展示
   flutter_svg: ^1.0.3
 
+  # 可拖动换位的grid
+  flutter_draggable_gridview: ^0.0.7
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
