--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,10 @@ dependencies:
   flutter_svg: ^1.0.3
 
   # 可拖动换位的grid
-  flutter_draggable_gridview: ^0.0.7
+  flutter_reorderable_grid_view: ^3.1.2
+
+  # 桌面系统菜单
+  contextmenu: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
