--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   crypto: ^3.0.2
 
   # 数据库
-  realm: ^0.2.1+alpha
+  realm: ^0.3.1+beta
 
   # sp数据管理
   shared_preferences: ^2.0.15
