优化文件信息读取方式 修复项目列表页删除时的bug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   # 链接跳转
   url_launcher: ^6.1.5
 
+  # xml文档操作
+  xml: ^6.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
