--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   # xml文档操作
   xml: ^6.1.0
 
+  # 表格组件
+  flutter_staggered_grid_view: ^0.6.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
