--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = flutter_platform_manage
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.jtech.flutter.platform.manage.flutterPlatformManage
+PRODUCT_BUNDLE_IDENTIFIER = com.example.flutterPlatformManage
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.jtech.flutter.platform.manage. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
