--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,9 @@ dependencies:
   # 图片处理
   image: ^3.2.2
 
+  # 颜色选择器
+  flutter_colorpicker: ^1.0.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
